# PTIS

./: .dockerignore  .gitignore  PTIS_GitHub_README.md  PTIS_IEEE_Paper_Draft.md  PTIS_Medium_Blog_Draft.md  PTIS_arXiv_Paper_Outline.md  README.md  build_tech_master.js  docker-compose.yml
backend/: ptis_api.py  ptis_dev_server.py  pyproject.toml  requirements.txt
backend/ptis_core/: __init__.py  batch.py  bayesian.py  cctv_evidence.py  cli.py  compliance.py  corridor.py  decision.py  field_replay.py  lwr.py  models.py  nav.py  provenance.py  remote_aggregate.py  report.py  repository.py  simulation.py
backend/tests/: test_batch.py  test_bayesian.py  test_cctv_evidence.py  test_decision.py  test_field_replay.py  test_lwr_compliance.py  test_official_reference.py  test_provenance.py  test_remote_aggregate.py  test_repository.py  test_route_geometry.py  test_simulation.py
data/: bmd45_cctv_manifest.json  dataset_manifest.json  field_dataset_manifest.template.json  official_reference_manifest.json
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: ARCHITECTURE.md  DATA_INTAKE_STANDARD.md  FIELD_REPLAY_VALIDATION.md  FIELD_SURVEY_RUNBOOK.md  LINKEDIN_POST_DRAFT.md  LINKEDIN_REVIEWER_QA.md  LINKEDIN_REVIEW_PACKAGE.md  OFFICIAL_REFERENCE_EXTRACT.md  PUBLIC_EVIDENCE_BRIEF.md  REAL_WORLD_DATA_REQUIREMENTS.md  REMOTE_OBSERVER_PACKET.md  REMOTE_VALIDATION_PATH.md  VALIDATION.md
evidence/: PROOF_REPORT.md  suite_report.json
frontend/: app.js  clear.css  clear.js  dashboard.html  index.html  styles.css  system.css  system.html
scripts/: generate_linkedin_assets.py  (+8 more)
(+24 files in other folders)
