[project]
name = "ptis-v2"
version = "0.1.0"
description = "Predictive Traffic Intelligence System core verification package"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
